[gd_scene load_steps=14 format=2]

[ext_resource path="res://script/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/PlayBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/Pixeled.tres" type="DynamicFontData" id=6]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 11, 0 )
b = Vector2( 10, 600 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 9, 0 )
b = Vector2( 10, 600 )

[sub_resource type="Animation" id=4]
resource_name = "countdown1"
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Countdown:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Countdown:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Countdown:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "1" ]
}

[sub_resource type="Animation" id=5]
resource_name = "countdown2"
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Countdown:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Countdown:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Countdown:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "2" ]
}

[sub_resource type="Animation" id=6]
resource_name = "countdown3"
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Countdown:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Countdown:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Countdown:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "3" ]
}

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 6 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="PlayBox" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -0.0169678 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 400, 320 )
speed = 650

[node name="BallSpawnPoint" type="Position2D" parent="."]
position = Vector2( 400, 320 )

[node name="Player1Stuff" type="Node" parent="."]

[node name="SpawnPoint" type="Position2D" parent="Player1Stuff"]
position = Vector2( 30, 320 )

[node name="Goal" type="StaticBody2D" parent="Player1Stuff" groups=["goals", "remote_collidable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1Stuff/Goal"]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="Score" type="Label" parent="Player1Stuff"]
visible = false
margin_left = 10.0
margin_top = -10.0
margin_right = 74.0
margin_bottom = 81.0
size_flags_horizontal = 13
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Stuff" type="Node" parent="."]

[node name="SpawnPoint" type="Position2D" parent="Player2Stuff"]
position = Vector2( 770, 320 )

[node name="Goal" type="StaticBody2D" parent="Player2Stuff" groups=["goals", "remote_collidable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2Stuff/Goal"]
position = Vector2( 781, 0 )
shape = SubResource( 3 )

[node name="Score" type="Label" parent="Player2Stuff"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -43.0
margin_top = -10.0
margin_right = -11.0
margin_bottom = 81.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 12
size_flags_vertical = 12
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownAnimation" type="AnimationPlayer" parent="."]
anims/countdown1 = SubResource( 4 )
anims/countdown2 = SubResource( 5 )
anims/countdown3 = SubResource( 6 )
next/countdown2 = "countdown1"
next/countdown3 = "countdown2"

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.0169678
margin_bottom = -0.0169678
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToLobby" type="Button" parent="UI"]
margin_left = 276.0
margin_top = 14.0
margin_right = 524.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 7 )
text = "Back to lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" type="Label" parent="UI"]
anchor_left = 0.3
anchor_top = 0.266695
anchor_right = 0.7
anchor_bottom = 0.800028
margin_right = -3.05176e-05
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.93, 0.93 )
rect_pivot_offset = Vector2( 160, 160 )
size_flags_horizontal = 12
size_flags_vertical = 12
custom_colors/font_color = Color( 1, 1, 1, 0.9 )
custom_fonts/font = SubResource( 8 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="button_up" from="UI/BackToLobby" to="." method="_on_BackToLobby_button_up"]
